feat: Add a scroll to top button on the page

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
         <p>Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar gravida, ipsum lacus aliquet velit, vel luctus diam ipsum a diam. Cras eu tincidunt arcu, vitae rhoncus purus. Vestibulum fermentum consectetur porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
       </div>
     </section>
+    <!-- Scroll to top button -->
+    <button class="scroll__btn">&#x2B06</button>
   </main>
   <footer class="page__footer">
     <p>&copy Udacity</p>
